<resources>
    <string name="app_name">UK Castles</string>
    <string name="opening_times_title">Opening times change due to time of year - click to see current opening times</string>
    <string name="operated_by_title">Operated by: </string>
    <string name="status_details_title">Current status:</string>
    <string name="address_title">See location on a map</string>
    <string name="history_title">Brief history of the site</string>
    <string name="audio_title">Detailed history of the site</string>
    <string name="details_rating_title">Site rating</string>
    <string name="click_website_string">. Click to visit their website.</string>
    <string name="music_title_text">Some medieval music to get you in the mood for your visit</string>
    <string name="share_long_click_title">Share</string>
    <string name="full_image_long_click_title">See full image slideshow</string>
    <string name="shared_preference_distance_key">distance_preference</string>
    <string name="shared_preference_sort_key">sort_preference</string>
    <string name="shared_preference_filter_key">filter_preference</string>
    <string name="shared_preference_distance_default">Miles</string>
    <string name="shared_preference_sort_default">A-Z</string>
    <string name="shared_preference_filter_default">None</string>
    <string name="offline_string">Offline</string>
    <string name="online_string">Online</string>
    <string name="notification_channel_description">Channel to receive weekly notifications about castles</string>
    <string name="notification_channel_name">My notification channel</string>
    <string name="notification_title">Castle App</string>
    <string name="notification_content">We now have 24 castles to view</string>
    <string name="appwidget_text">UK Castles</string>
    <string name="add_widget">Add widget</string>
    <string name="share_intent_title">Share using</string>
    <string name="castle_app_widget_image">Castle image for widget</string>
    <string name="km_away_string">KMs away</string>
    <string name="miles_away_string">Miles away</string>
    <string name="no_location_permission_message">Please enable location permissions to use this app</string>
    <string name="close_app_alert_option">Close App</string>
    <string name="toolbar_subtitle_text">Click Castle to see more info</string>
    <string name="permission_rationale_title">Permission needed</string>
    <string name="permission_rationale_message">This permission is needed for the app to run</string>
    <string name="cancel_alert_button">Cancel</string>
    <string name="ok_alert_button">OK</string>
    <string name="search_text_view_hint">Enter search</string>
    <string name="search_button_text">Search</string>
    <string name="reset_button_text">Reset</string>
    <string name="settings_toolbar_title">Settings</string>
    <string name="content_description_image_item">Image of Castle</string>
    <string name="full_image_content_description">Full image in full image activity</string>
    <string name="settings_distance_title">Distance</string>
    <string name="settings_sort_title">Sort by</string>
    <string name="settings_filter_title">Filter by</string>
    <string name="main_button_text">See castles in list</string>
    <string name="castle_map_button_text">See castles on map</string>
    <string name="title_activity_maps">Map</string>
    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="terrain_map">Terrain Map</string>
    <string name="maps_activity_toolbar_subtitle">Click a castle to see more details</string>
    <string name="maps_marker_snippet">\"Operated by: %1$s\"</string>
    <string name="snackbar_action_text">See details</string>
    <string-array name="distance_array">
        <item>Km</item>
        <item>Miles</item>
    </string-array>
    <string-array name="sort_array">
        <item>A-Z</item>
        <item>Distance</item>
        <item>Rating</item>
    </string-array>
    <string-array name="filter_array">
        <item>None</item>
        <item>English Heritage</item>
    </string-array>
    <string-array name="wark_history">
        <item>Built in the mid-twelfth centuryBuilt in the mid-twelfth century</item>
        <item>In 1327, the castle twice held out against Scottish sieges</item>
        <item>The powerful and influential Percy family was given the castle by the crown in the early 14th century</item>
        <item>The Percy family helped Henry IV win the throne from Richard II. But the family later rebelled against the new king. The rebellion was defeated at the battle of Shewsbury.</item>
    </string-array>
    <string-array name="dunstan_history">
        <item>Built by the Earl Thomas of Lancaster in the early 14th century</item>
        <item>Earl Thomas led an unsuccessful rebellion against King Edward II, causing him to be executed by the king. As a result, the castle was seized by the crown.</item>
        <item>John of Gaunt, who founded the royal House of Lancaster which later took part in the Wars of the Roses, greatly expanded the castle in the late 14th century.</item>
        <item>The castle was traded back and forth during the Wars of the Roses, which represented its strategic importance in the north of England. The damage sustained during these wars was never fully repaired. </item>
    </string-array>
    <string-array name="rising_history">
        <item>Built during the mid 12th century by an Anglo-Norman lord</item>
        <item>The castle was famously the home of Queen Isabella after the accession of her son, Edward III, to power.</item>
        <item>Queen Isabella joined forces with Roger Mortimer to rebel and bring down her husband Edward II. She ruled along with Mortimer for a short period before her son, Edward III, seized control of the nation.</item>
        <item>The castle quickly became valued for its hunting facilities rather than its strategic importance.</item>
    </string-array>
    <string-array name="berk_history">
        <item>Built on a key route between London and the Midlands by the Normans in the 11th century</item>
        <item>Thomas Becket was granted the castle in the 12th century, before falling out with the King and being stripped of the castle.</item>
        <item>The castle was besieged by the French Prince Louis in 1216. He was attempting to take control of the crown after the death of King John.</item>
        <item>The castle was taken apart for stone as early as the mid 16th century, and is now a sparse ruin.</item>
    </string-array>
    <string-array name="warwick_history">
        <item>The castle was originally a wooden fort construction by William I</item>
        <item>The Beauchamp family controlled the castle for much of the medieval period and were influential on the course of English history.</item>
        <item>The castle passed to Richard Neville after the Beauchamp line ended. He was known as the kingmaker for he often held the balance of power during the Wars of the Roses, and was therefore able to gather much power to himself.</item>
        <item>The castle was used as a military base up until the early 17th century, when it was converted into a country house.</item>
    </string-array>
    <string-array name="bamburgh_history">
        <item>The site was formally a stronghold of Celtic Britons and Anglo-Saxons.</item>
        <item>The fort was destroyed by the Vikings only around 70 years before the arrival of the Normans in England.</item>
        <item>The Normans later constructed a new castle on this site, which has evolved into what can be seen today. </item>
        <item>The castle was the first in England to be defeated by artillery during a siege in the Wars of the Roses. </item>
    </string-array>
    <string-array name="alnwick_history">
        <item>Alnwick Castle was first built by Norman lords following William the Conqueror’s invasion of England.</item>
        <item>The castle was sieged many times by the Scottish throughout the 12th century, with David I of Scotland successfully capturing it in 1136.</item>
        <item>The powerful and influential Percy family took control of the castle in the 13th century, who turned the castle into a major fortress in the England-Scotland border region.</item>
        <item>The castle was used as a stand-in for Hogwarts during the Harry Potter films</item>
    </string-array>
    <string-array name="dover_history">
        <item>This version of Dover castle was built in the 11th century.</item>
        <item>However, due to its strategic importance, fortifications on this site likely pre-date the Roman invasions.</item>
        <item>The castle was rebuilt significantly during the Napoleonic wars, and was occupied by British forces to defeat against a potential French Calais-Dover invasion.</item>
        <item>Dover castle was a military command centre during the second world war. The evacuation of Dunkirk was directed from this site.</item>
    </string-array>
    <string-array name="raby_history">
        <item>Built by the Neville family in the late 14th century</item>
        <item>Cecily Neville was born In the castle, her children included King Edward IV and Richard III, the Yorkist kings of England.</item>
        <item>The Neville family attempted to support the claim of the catholic Mary, Queen of Scots, to the English throne. Following this, the castle was taken into royal ownership.</item>
        <item>The castle is still lived in today.</item>
    </string-array>
    <string-array name="caen_history">
        <item>The first stone building was built by Edward I of England following his attempts to control Wales.</item>
        <item>The castle was sacked in 1294 during a Welsh rebellion against English rule.</item>
        <item>With the accession of the Tudor family to the crown in 1485 and due to their Welsh heritage, relations between Wales and England improved so the castle was no longer an important military base.</item>
        <item>Despite its poor condition, the royalist controlled castle was sieged several times during the English civil wars.</item>
    </string-array>
    <string-array name="carlisle_history">
        <item>This castle was built in Norman times and sits close to the ruins of Hadrian’s wall.</item>
        <item>During Roman times, a fort was built on this same site.</item>
        <item>The castle was captured by David, King of Scotland, in the early 12th century. Due to its strategic location on the Anglo-Scottish border it was sieged many times in the middle ages.</item>
        <item>The castle was the site of a bloody siege during the Wars of the Roses, with the Lancastrians teaming up with the Scots to seize the castle from the Yorkists.</item>
    </string-array>
    <string-array name="conway_history">
        <item>Built by Edward I in the late 13th century, it was one of many castles built in the North of Wales during this time.</item>
        <item>It repelled many welsh sieges, including in 1294 when Madog ap Llywelyn failed to take the castle.</item>
        <item>Richard II took refuge at the castle in 1399, as his power slipped away following defeat by the future King Henry IV. </item>
        <item>The castle was dismantled significantly following the English civil wars as Parliament did not want it used in further revolts.</item>
    </string-array>
</resources>