<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent" android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/details_root_layout"
        >

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />


        <Button
            android:id="@+id/operated_by_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/address_details_text_view"
            tools:text="@string/operated_by_title" />


        <Button
            android:id="@+id/opening_times_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/operated_by_text_view"
            tools:text="@string/opening_times_title" />

        <ImageView
            android:id="@+id/photos_image_view"
            android:layout_width="match_parent"
            android:layout_height="175dp"
            android:layout_marginStart="64dp"
            android:layout_marginEnd="64dp"
            android:elevation="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/details_history_title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/photos_image_view"
            tools:text="@string/history_title" />

        <TextView
            android:id="@+id/history_details_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/details_history_title_text_view"
            tools:text="Click castle to see details here" />

        <Button
            android:id="@+id/address_details_text_view"
            android:layout_width="match_parent"
            android:layout_height="76dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            tools:text="@string/address_title"
            android:textAlignment="center"
            android:textSize="16sp"
            android:text="@string/address_title"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ratingBar"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/playerView_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="Listen to audio about the castle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/history_details_text_view"
            android:textSize="24sp"
            />

        <com.google.android.exoplayer2.ui.PlayerView
            android:id="@+id/playerView"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/playerView_title"

            />






        <TextView
            android:id="@+id/site_rating_title"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            tools:text="@string/details_rating_title"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/playerView"
            />

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="231dp"
            android:layout_height="42dp"
            android:layout_marginStart="12dp"
            android:layout_marginBottom="8dp"
            android:isIndicator="true"
            android:numStars="5"
            android:stepSize="0.1"
            app:layout_constraintStart_toEndOf="@+id/site_rating_title"
            app:layout_constraintTop_toBottomOf="@+id/playerView"
            app:layout_constraintVertical_bias="0.195"
            android:visibility="invisible"
            />



    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>